--- a/app/src/main/res/layout/meltem_yildirim.xml
+++ b/app/src/main/res/layout/meltem_yildirim.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.meltem_yildirim.MainActivity">
+    android:layout_height="match_parent">
 
     <ImageView
         android:layout_width="match_parent"
@@ -34,7 +32,7 @@
             android:id="@+id/text"
             android:layout_width="200dp"
             android:layout_height="100dp"
-            android:text="@string/sample_text"
+            android:text="some text"
             android:layout_alignTop="@+id/right_image"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
