--- a/app/src/main/res/layout/jonathan_colon.xml
+++ b/app/src/main/res/layout/jonathan_colon.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingTop="@dimen/activity_vertical_margin"
@@ -26,8 +25,8 @@
             android:paddingLeft="3dp"
             android:paddingRight="3dp"
             android:layout_below="@+id/nickname"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentStart="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentLeft="true"
             android:layout_above="@+id/imageView"
             android:textSize="20sp"
             android:gravity="left" />
