--- a/app/src/main/res/layout/rusi_li.xml
+++ b/app/src/main/res/layout/rusi_li.xml
@@ -48,7 +48,7 @@
                 android:id="@+id/imagesecond"
                 android:layout_width="100dp"
                 android:layout_height="match_parent"
-                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
                 android:src="@drawable/rli_image_self2"
                 />
             <ImageView
