--- a/app/src/main/res/layout/akasha_archer.xml
+++ b/app/src/main/res/layout/akasha_archer.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/gradient_background"
-    android:orientation="vertical"
-    tools:context="nyc.c4q.akashaarcher.akasha_pictureplay.MainActivity">
+    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/aa_profile"
@@ -15,10 +13,7 @@
         android:layout_gravity="center"
         android:scaleType="centerCrop"
         android:src="@drawable/aa_profile_pic"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="10dp"
-        android:layout_alignParentEnd="true" />
+        android:layout_marginBottom="10dp"/>
 
 
     <TextView
