--- a/app/src/main/res/layout/butcher_shop.xml
+++ b/app/src/main/res/layout/butcher_shop.xml
@@ -3,85 +3,113 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical"
-    android:background="#FFFFFF">
-
-    <TextView
-        android:layout_centerInParent="true"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="60sp"
-        android:textStyle="bold"
-        android:background="#ffd2d0"
-        android:text="BUTCHER SHOP"
-        android:textAlignment="center"
-        android:layout_gravity="center"
-        android:textColor="#f27685"
-        android:fontFamily="sans-serif-smallcaps"
-        android:layout_marginBottom="20dp"/>
+    android:background="@drawable/meatpattern">
 
 
-
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="125dp"
+        android:id="@+id/imageView4"
+        android:layout_gravity="center_horizontal"
+        android:src="@drawable/butcherlogo"
+        android:background="#F6F2F1"
+        android:layout_marginBottom="30dp" />
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="362dp"
+        android:layout_marginTop="5dp"
+        android:layout_gravity="bottom">
 
-    <Button
-        android:id="@+id/PIG"
-        android:layout_marginBottom="10dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingRight="50dp"
-        android:paddingLeft="50dp"
-        android:paddingTop="30dp"
-        android:paddingBottom="30dp"
-        android:text="PIG"
-        android:layout_marginLeft="15dp"
-        android:textSize="15pt"
-        android:tag="Y"
-        android:textColor="#ffffff"
-        android:background="#f27685"
-        android:onClick="onButtonClicked"
-        android:fontFamily="cursive"
-        android:textStyle="bold"/>
+        <Button
+            android:id="@+id/PIG"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingRight="50dp"
+            android:paddingLeft="50dp"
+            android:paddingTop="30dp"
+            android:paddingBottom="30dp"
+            android:text="PIG"
+            android:textSize="15pt"
+            android:tag="Y"
+            android:textColor="#ffffff"
+            android:background="@color/butcherButtons"
+            android:onClick="onButtonClicked"
+            android:fontFamily="cursive"
+            android:textStyle="bold"
+            android:layout_gravity="center_horizontal"
+            android:layout_below="@+id/COW"
+            android:layout_alignLeft="@+id/COW"
+            android:layout_alignStart="@+id/COW"
+            android:layout_marginTop="15dp" />
 
-    <Button
-        android:id="@+id/COW"
-        android:layout_marginBottom="10dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingRight="40dp"
-        android:paddingLeft="40dp"
-        android:paddingTop="30dp"
-        android:paddingBottom="30dp"
-        android:textColor="#ffffff"
-        android:text="COW"
-        android:layout_marginLeft="15dp"
-        android:textSize="15pt"
-        android:tag="Y"
-        android:background="#f27685"
-        android:onClick="onButtonClicked"
-        android:fontFamily="cursive"
-        android:textStyle="bold"/>
+        <Button
+            android:id="@+id/COW"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingRight="40dp"
+            android:paddingLeft="40dp"
+            android:paddingTop="30dp"
+            android:paddingBottom="30dp"
+            android:textColor="#ffffff"
+            android:text="COW"
+            android:textSize="15pt"
+            android:tag="Y"
+            android:background="@color/butcherButtons"
+            android:onClick="onButtonClicked"
+            android:fontFamily="cursive"
+            android:textStyle="bold"
+            android:layout_gravity="center_horizontal"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="15dp" />
 
-    <Button
-        android:id="@+id/GOAT"
-        android:layout_marginBottom="10dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingRight="37dp"
-        android:paddingLeft="37dp"
-        android:paddingTop="30dp"
-        android:paddingBottom="30dp"
-        android:textColor="#ffffff"
-        android:text="GOAT"
-        android:layout_marginLeft="15dp"
-        android:typeface="monospace"
-        android:textSize="15pt"
-        android:tag="Y"
-        android:background="#f27685"
-        android:onClick="onButtonClicked"
-        android:fontFamily="cursive"
-        android:textStyle="bold"/>
+        <Button
+            android:id="@+id/GOAT"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingRight="37dp"
+            android:paddingLeft="37dp"
+            android:paddingTop="30dp"
+            android:paddingBottom="30dp"
+            android:textColor="#ffffff"
+            android:text="GOAT"
+            android:typeface="monospace"
+            android:textSize="15pt"
+            android:tag="Y"
+            android:background="@color/butcherButtons"
+            android:onClick="onButtonClicked"
+            android:fontFamily="cursive"
+            android:textStyle="bold"
+            android:layout_gravity="center_horizontal"
+            android:layout_below="@+id/PIG"
+            android:layout_alignLeft="@+id/PIG"
+            android:layout_alignStart="@+id/PIG"
+            android:layout_marginTop="15dp" />
+
+
+    </RelativeLayout>
+
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:text="For special orders, please contact us at GenericsButcherShop@email.com"
+            android:id="@+id/textView3"
+            android:background="#F6F2F1"
+            android:textColor="#3D3D3D"
+            android:textSize="15sp"
+            android:gravity="center"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true" />
+    </RelativeLayout>
+
 
 </LinearLayout>
