--- a/app/src/main/res/layout/hot_foods.xml
+++ b/app/src/main/res/layout/hot_foods.xml
@@ -5,7 +5,7 @@
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
     android:paddingTop="30dp"
-    android:background="#000000"
+    android:background="#ffffff"
     android:orientation="vertical" >
     <TextView
         android:layout_width="match_parent"
@@ -25,7 +25,8 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="250sp"
-        android:gravity="center"/>
+        android:gravity="center"
+        android:src="@drawable/chicken_icon"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -34,6 +35,7 @@
         android:textStyle="bold"
         android:hint="-------------"/>
     <Button
+        android:id="@+id/buttonMenu"
         android:layout_width="200sp"
         android:layout_height="60sp"
         android:layout_gravity="bottom|center"
@@ -41,5 +43,6 @@
         android:textColorHint="#FF3D00"
         android:textSize="20sp"
         android:background="#FAFAFA"
-        android:hint="M E N U" />
+        android:hint="M E N U"
+        android:onClick="toMenu"/>
 </LinearLayout>
