--- a/app/src/main/res/layout/bagel_shop.xml
+++ b/app/src/main/res/layout/bagel_shop.xml
@@ -1,56 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:background="#ffe6e6">
-
-
-
-
-    <TextView
-        android:layout_gravity="center"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="80sp"
-        android:text="BAGELS"
-        android:textColor="#FFFF00FF"
-        android:layout_marginTop="20dp"
-        />
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <View
+        android:id="@+id/view"
         android:layout_width="match_parent"
-        android:layout_height="200dp"/>
-
-
+        android:layout_height="0dp"
+        android:layout_weight="8"
+        android:background="@drawable/bagel_crop2"/>
 
     <Button
+        android:id="@+id/bagel_button"
         android:gravity="center"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="40sp"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="2"
+        android:textSize="36sp"
         android:text="CHOOSE YOUR BAGEL"
-        android:textColor="#FFFF00FF"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
+        android:textColor="#FFFFFF"
+        android:background="#FF000000"
         />
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp">
 
-        <Button
-            android:layout_width="180dp"
-            android:layout_height="match_parent"
-            android:text="RATE US"
-
-            />
-        <Button
-            android:layout_width="180dp"
-            android:layout_height="match_parent"
-            android:text="CLOSE"
-            />
-
-    </LinearLayout>
 </LinearLayout>
