Chilled Items Update

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="white">#FFFFFF</color>
     <color name="red">#FF4005</color>
     <color name="blue">#64B5F6</color>
+    <color name="grey">#E5E2DF</color>
 </resources>
