--- a/app/src/main/res/layout/chilled_items.xml
+++ b/app/src/main/res/layout/chilled_items.xml
@@ -4,72 +4,102 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#88FFFF00"
+    android:background="@color/grey"
     android:weightSum="1">
 
-    <TextView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="60sp"
-        android:gravity="center"
-        android:text="Chilled Items!"
-        android:textColor="#4fc3f7"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:id="@+id/textView" />
+        android:layout_height="match_parent">
 
-    <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="match_parent"
-        android:layout_height="120sp"
-        android:textSize="35sp"
-        android:text="SNACKS"
-        android:id="@+id/button"
-        android:layout_below="@+id/textView"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="150dp"
+            android:id="@+id/imageView2"
+            android:src="@drawable/cooltext"
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentTop="true" />
 
-    <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="match_parent"
-        android:layout_height="120sp"
-        android:textSize="35sp"
-        android:text="DRINKS"
-        android:id="@+id/button2"
-        android:layout_below="@+id/button"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        <ImageView
+            android:layout_width="130dp"
+            android:layout_height="130dp"
+            android:id="@+id/imageView3"
+            android:src="@drawable/milkandeggs"
+            android:onClick="Dairy"
+            android:layout_below="@+id/imageView2"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:textSize="25sp"
-        android:gravity="center"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Recently View Items"
-        android:id="@+id/textView2"
-        android:layout_below="@+id/button2"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        <ImageView
+            android:layout_width="110dp"
+            android:layout_height="110dp"
+            android:id="@+id/imageView4"
+            android:src="@drawable/beers"
+            android:layout_below="@+id/button"
+            android:layout_alignRight="@+id/imageView3"
+            android:layout_alignEnd="@+id/imageView3" />
 
-    <ImageView
-        android:layout_width="150dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="50dp"
-        android:id="@+id/imageView"
-        android:src="@android:drawable/btn_star_big_on" />
+        <ImageView
+            android:layout_width="135dp"
+            android:layout_height="135dp"
+            android:id="@+id/imageView5"
+            android:src="@drawable/sodalarge"
+            android:layout_below="@+id/imageView2"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
 
-    <ImageView
-        android:layout_width="150dp"
-        android:layout_height="60dp"
-        android:id="@+id/imageView2"
-        android:layout_gravity="right"
-        android:layout_weight="0.88"
-        android:src="@android:drawable/btn_star_big_on"/>
+        <ImageView
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:id="@+id/imageView6"
+            android:src="@drawable/orangejuice"
+            android:layout_alignBottom="@+id/imageView4"
+            android:layout_alignLeft="@+id/button11"
+            android:layout_alignStart="@+id/button11" />
+
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="DAIRY"
+            android:id="@+id/button"
+            android:layout_below="@+id/imageView3"
+            android:layout_alignLeft="@+id/imageView4"
+            android:layout_alignStart="@+id/imageView4" />
+
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="ALCOHOL"
+            android:id="@+id/button9"
+            android:layout_below="@+id/imageView4"
+            android:layout_alignLeft="@+id/imageView4"
+            android:layout_alignStart="@+id/imageView4" />
+
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="JUICE"
+            android:id="@+id/button10"
+            android:layout_alignTop="@+id/button9"
+            android:layout_alignLeft="@+id/imageView6"
+            android:layout_alignStart="@+id/imageView6" />
+
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="SODA"
+            android:id="@+id/button11"
+            android:layout_below="@+id/imageView5"
+            android:gravity="center"
+            android:layout_alignLeft="@+id/imageView5"
+            android:layout_alignStart="@+id/imageView5" />
+
+
+    </RelativeLayout>
+
 
 
 </LinearLayout>
