--- a/app/src/main/res/layout/bakery.xml
+++ b/app/src/main/res/layout/bakery.xml
@@ -15,39 +15,62 @@
         android:textColor="#b361b3"
         android:shadowColor="#b361b3"
         android:singleLine="false"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginLeft="100dp" />
+        android:textAlignment="center"
+        android:layout_gravity="center"
+        android:layout_centerHorizontal="true"/>
 
     <ImageView
         android:layout_width="250dp"
         android:layout_height="300dp"
-        android:layout_marginLeft="50dp"
         android:id="@+id/imageView"
-        android:layout_gravity="top"
-        android:nestedScrollingEnabled="false"
-        android:src="@drawable/cupcake" />
+        android:layout_gravity="center_horizontal"
+        android:src="@drawable/cupcake_logo" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:layout_gravity="center_horizontal"
-        android:layout_weight="0.56"
         android:background="#e19ce2">
+
+        <ImageView
+            android:clickable="true"
+            android:id="@+id/cake"
+            android:src="@drawable/btnCake"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <ImageView
+            android:id="@+id/cupcake"
+            android:src="@drawable/btnCupcake"
+            android:clickable="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <ImageView
+            android:id="@+id/brownie"
+            android:src="@drawable/btnBrownie"
+            android:clickable="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            />
+        <ImageView
+            android:id="@+id/pie"
+            android:src="@drawable/btnPie"
+            android:clickable="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
         <LinearLayout
 
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
+            android:orientation="horizontal"
             android:layout_gravity="center_horizontal"
             android:layout_weight="0.3"
-            android:layout_marginLeft="100dp">
+            android:layout_marginLeft="100dp"/>
+
+
         </LinearLayout>
-
-
-
-    </LinearLayout>
-
 
 </LinearLayout>
