--- a/app/src/main/res/layout/bagel_shop.xml
+++ b/app/src/main/res/layout/bagel_shop.xml
@@ -2,25 +2,65 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@drawable/bagel_store_bg">
 
     <View
         android:id="@+id/view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="8"
-        android:background="@drawable/bagel_crop2"/>
+        android:layout_weight="8"/>
 
-    <Button
-        android:id="@+id/bagel_button"
-        android:gravity="center"
-        android:layout_width="match_parent"
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginBottom="10dp"
+        android:textSize="25sp"
+        android:textColor="#000000"
+        android:typeface="serif"
+        android:textStyle="bold"
+        android:layout_marginRight="10dp"
+        android:background="#90CCFFFF"
+        android:text="Choose Your Bagel"/>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_weight="2"
-        android:textSize="36sp"
-        android:text="CHOOSE YOUR BAGEL"
-        android:textColor="#FFFFFF"
-        android:background="#FF000000"
-        />
+        android:layout_weight="3"
+        android:orientation="vertical"
+        android:layout_gravity="right"
+        android:layout_margin="10dp"
+        >
+
+        <Button
+            android:id="@+id/browning_button"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:textSize="36sp"
+            android:text="Browning"
+            android:textColor="#FFFFFF"
+            android:background="#80000000"
+            android:layout_marginBottom="5dp"
+            android:padding="5dp"
+            />
+
+        <Button
+            android:id="@+id/spread_button"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:textSize="36sp"
+            android:text="Spreads"
+            android:textColor="#FFFFFF"
+            android:background="#80000000"
+            android:layout_marginTop="5dp"
+            android:padding="5dp"/>
+
+    </LinearLayout>
+
 
 </LinearLayout>
