--- a/app/src/main/res/layout/bagel_shop.xml
+++ b/app/src/main/res/layout/bagel_shop.xml
@@ -3,64 +3,46 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/bagel_store_bg">
+    android:background="@drawable/bagel_background_port">
 
     <View
         android:id="@+id/view"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="8"/>
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:layout_gravity="center"
+        android:background="@drawable/bagel_store_logo_bg"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginBottom="10dp"
-        android:textSize="25sp"
         android:textColor="#000000"
+        android:textSize="25sp"
         android:typeface="serif"
         android:textStyle="bold"
-        android:layout_marginRight="10dp"
-        android:background="#90CCFFFF"
-        android:text="Choose Your Bagel"/>
+        android:text="Choose Your Bagel"
+        android:background="#90CCFFFF" />
 
-    <LinearLayout
+    <Button
+        android:id="@+id/browning_button"
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_weight="3"
-        android:orientation="vertical"
-        android:layout_gravity="right"
-        android:layout_margin="10dp"
-        >
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:textSize="30sp"
+        android:text="Browning"
+        android:textColor="#FFFFFF"
+        android:background="#80000000"/>
 
-        <Button
-            android:id="@+id/browning_button"
-            android:gravity="center"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:textSize="36sp"
-            android:text="Browning"
-            android:textColor="#FFFFFF"
-            android:background="#80000000"
-            android:layout_marginBottom="5dp"
-            android:padding="5dp"
-            />
-
-        <Button
-            android:id="@+id/spread_button"
-            android:gravity="center"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:textSize="36sp"
-            android:text="Spreads"
-            android:textColor="#FFFFFF"
-            android:background="#80000000"
-            android:layout_marginTop="5dp"
-            android:padding="5dp"/>
-
-    </LinearLayout>
-
-
+    <Button
+        android:id="@+id/spread_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:textSize="30sp"
+        android:text="Spreads"
+        android:textColor="#FFFFFF"
+        android:background="#80000000"/>
 </LinearLayout>
+
