--- a/app/src/main/res/layout/employee_handbook.xml
+++ b/app/src/main/res/layout/employee_handbook.xml
@@ -1,6 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    style="@style/default_activity">
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/select_an_employee"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Select an Employee"
+        android:layout_centerHorizontal="true"/>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/employeeList"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/select_an_employee"/>
+</RelativeLayout>
