--- a/app/src/main/res/layout/store_menu.xml
+++ b/app/src/main/res/layout/store_menu.xml
@@ -2,7 +2,8 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    style="@style/default_activity">
     <Button
         android:id="@+id/button1"
         android:layout_width="@dimen/store_menu_button_size"
