--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,5 @@
     <dimen name="normal_text_size">20sp</dimen>
     <dimen name="flashing_board_row_height">20dp</dimen>
     <dimen name="flashing_board_item_width">80dp</dimen>
+    <dimen name="small_image_size">100dp</dimen>
 </resources>
