--- a/app/src/main/res/layout/hyunjoo.xml
+++ b/app/src/main/res/layout/hyunjoo.xml
@@ -2,7 +2,7 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/activity_main"
+    android:id="@+id/hyunjoo_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -16,10 +16,8 @@
         android:id ="@+id/myface"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:rotation="90"
-        app:srcCompat="@drawable/facepicture"
+        app:srcCompat="@drawable/hyunjoo"
         android:layout_alignParentTop="true"
-
         android:layout_marginTop="22dp" />
 
     <TextView
@@ -40,34 +38,22 @@
         android:layout_width="175dp"
         android:layout_height="90dp"
         app:srcCompat="@drawable/movie_7001c"
-        android:id="@+id/imageView7"
         android:layout_alignBottom="@+id/imageView4"
-        android:layout_alignRight="@+id/text"
-        android:layout_alignEnd="@+id/text" />
+        android:id="@+id/imageView7"
+        android:layout_below="@+id/textbelow"
+        android:layout_toRightOf="@+id/imageView4"
+        android:layout_toEndOf="@+id/imageView4" />
 
-    <ImageView
+    <ViewAnimator
+        android:id="@+id/imageView4"
+        android:animateFirstView="true"
         android:layout_width="175dp"
         android:layout_height="100dp"
-        app:srcCompat="@drawable/giphy"
-        android:id="@+id/imageView4"
-        android:layout_marginBottom="36dp"
+        android:background="@drawable/giphy"
+        android:layout_marginBottom="28dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=" aka Hyunjoo"
-        android:textSize="25sp"
-        android:textStyle="bold"
-        android:id="@+id/textView"
-        android:layout_marginTop="16dp"
-        android:layout_below="@+id/text"
-        android:layout_toRightOf="@+id/imageView4"
-        android:layout_toEndOf="@+id/imageView4"
-        android:layout_marginLeft="13dp"
-        android:layout_marginStart="13dp" />
+        android:layout_alignLeft="@+id/textbelow"
+        android:layout_alignStart="@+id/textbelow" />
 
     <TextView
         android:id="@+id/text"
@@ -77,8 +63,20 @@
         android:textSize="40sp"
         android:textStyle="bold"
         android:layout_alignTop="@+id/myface"
-        android:layout_alignLeft="@+id/textView"
-        android:layout_alignStart="@+id/textView" />
+        android:layout_toRightOf="@+id/imageView4"
+        android:layout_toEndOf="@+id/imageView4" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=" aka Hyunjoo"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        android:id="@+id/textView"
+        android:layout_marginTop="20dp"
+        android:layout_below="@+id/text"
+        android:layout_alignRight="@+id/text"
+        android:layout_alignEnd="@+id/text" />
 
 
 </RelativeLayout>
