--- a/app/src/main/res/layout/hui_lin.xml
+++ b/app/src/main/res/layout/hui_lin.xml
@@ -25,28 +25,31 @@
     </RelativeLayout>
     <TextView
         android:id="@+id/nickname"
-        android:layout_width="match_parent"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:text="Hi I'm Lily"
         android:textSize="18sp"
         android:textStyle="bold"
-        android:gravity="center"/>
+        android:gravity="center"
+        android:layout_gravity="center"/>
     <TextView
         android:id="@+id/name"
-        android:layout_width="match_parent"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:text="or Hui, I like both names."
         android:textSize="18sp"
         android:textStyle="bold"
-        android:gravity="center"/>
+        android:gravity="center"
+        android:layout_gravity="center"/>
     <TextView
-        android:id="@+id/cutedesserts"
-        android:layout_width="match_parent"
+        android:id="@+id/message"
+        android:layout_width="325dp"
         android:layout_height="wrap_content"
-        android:text="I love desserts!"
+        android:text="Make sure you try octopus sashimi, archery &amp; horror movie marathons."
         android:textSize="18sp"
         android:textStyle="bold"
-        android:gravity="center"/>
+        android:gravity="center"
+        android:layout_gravity="center"/>
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
