--- a/app/src/main/res/layout/employee_view.xml
+++ b/app/src/main/res/layout/employee_view.xml
@@ -3,7 +3,7 @@
 
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:id="@+id/employee_view"
+    android:id="@+id/employee_profile"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
