--- a/app/src/main/res/layout/employee_handbook.xml
+++ b/app/src/main/res/layout/employee_handbook.xml
@@ -9,7 +9,7 @@
         android:id="@+id/select_an_employee"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Select an Employee"
+        style="@style/TextAppearance.AppCompat.Large"
         android:layout_centerHorizontal="true"/>
 
     <android.support.v7.widget.RecyclerView
