--- a/app/src/main/res/layout/jordan_smith.xml
+++ b/app/src/main/res/layout/jordan_smith.xml
@@ -12,7 +12,7 @@
     <ImageView
         android:layout_width="200dp"
         android:layout_height="165dp"
-        android:src = "@drawable/profile_picture"
+        android:src = "@drawable/jordan"
         />
     <TextView
         android:layout_width="200dp"
