--- a/app/src/main/res/layout/nesada_koca.xml
+++ b/app/src/main/res/layout/nesada_koca.xml
@@ -14,7 +14,8 @@
         android:src="@drawable/nk"
         android:layout_width="wrap_content"
         android:layout_height="120dp"
-        android:layout_marginBottom="20dp"/>
+        android:layout_marginBottom="20dp"
+        android:id="@+id/imageView8" />
 
     <ImageView
         android:src="@drawable/albania"
