--- a/app/src/main/res/layout/helen_chan.xml
+++ b/app/src/main/res/layout/helen_chan.xml
@@ -19,7 +19,7 @@
             android:id="@+id/profile_pic"
             android:layout_width="190dp"
             android:layout_height="190dp"
-            android:background="@drawable/helenprofilepic"
+            android:background="@drawable/helen"
             android:padding="10dp"/>
         <TextView
             android:layout_width="wrap_content"
